change app name

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name" : "馨澜美邻",
+    "name" : "澜充小站",
     "appid" : "__UNI__E7AAC05",
     "description" : "",
     "versionName" : "1.0.0",
